fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 body{
-margin:0;
-font-family:Arial;
-background:#0b1220;
-color:white;
+  margin:0;
+  overflow-x: hidden;
+  max-width: 100vw;
+  font-family:Arial;
+  background: #0b1220;
+  color: white;
 }
 
 .navbar{
